# menwai-shentang-app

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  ENV.md  FILE_INDEX.md  PRD-门外审堂读书学习系统.md  PRD-门外审堂读书学习系统_V2.0.md  TEST_PLAN.md  TEST_REPORT_TEMPLATE.md  竞品调研报告-学习型软件最佳实践.md  门外审堂-导师点评Prompt模板与API对接规范.md  门外审堂学习系统_开发计划_甘特图.drawio  门外审堂学习系统_架构图.drawio
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  README.md  schema.sql  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: NavBar.tsx
src/lib/: database.ts  mentorApi.ts  sampleData.ts  store.ts  tauriBridge.ts
src/pages/: DiscussionPage.tsx  OnboardingPage.tsx  ProfilePage.tsx  ReadingPage.tsx  ReflectionPage.tsx
src/styles/: global.css
